--- a/app/src/main/res/layout/activity_hello.xml
+++ b/app/src/main/res/layout/activity_hello.xml
@@ -35,10 +35,10 @@
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/privetstvie" />
 
-
+    
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -52,31 +52,22 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.247" />
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:orientation="vertical"
-        android:padding="30dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+    <TextView
+        android:id="@+id/tva"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="اَلسَّلَامُ عَلَيْكُم \n وَرَحْمَةُ ٱللَّٰهِ تَعَالَى وَبَرَكَاتُهُ"
+        android:textSize="42dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.0">
-
-        <com.example.helloactivity.HelloAnim
-            android:id="@+id/tvaa"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text=""
-            android:textSize="38dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.054" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.054" />
 
 
-
-    </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
